# IPv4-calculator

./: CMakeLists.txt  IPAddress.cpp  IPv4_Calculator.cpp  README.md  RUN.bat  SubnetCalculator.cpp
headers/: IPAddress.h  SubnetCalculator.h
